# Inkberry

./: .gitignore  README.md
src/DisplayServer/: DisplayServer.py  Dockerfile  deploy.sh  docker-compose-jetsonnano.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
src/DisplayServer/DisplayFramework/: BaseTile.py  DeviceLookUpTable.py  DeviceSpecification.py  Devices.py  Grid.py  GridPosition.py  Helper.py  ImplementedDevices.py  ResourceHelper.py  SVGHelper.py  SVGRenderer.py  SVGTemplates.py  TileFactory.py  TileSpecification.py
src/DisplayServer/DisplayFramework/pysvg/: builders.py  parser.py
src/DisplayServer/DisplayFramework/tiles/: ImageTile.py  QrTile.py  TableViewTile.py  TextTile.py
src/DisplayServer/DisplayServer/: app.py
src/DisplayServer/DisplayServer/data/: _devices.json  devices.json
src/DisplayServer/DisplayServer/resources/: SETUP_QR_CODE_index.html  opening_hours.csv  personal_information.csv
src/DisplayServer/DisplayServer/static/: Inkberry.bsdesign  Inkberry_BS5.bsdesign  Inkberry_BS5_bck.bsdesign  display.html  editor.html  editorselect.html  htmlpreview.html  index.html  manifest.json  manualregister.html  reactivate.html  register.html  robots.txt  untitled.html
src/DisplayServer/DisplayServer/static/assets/bootstrap/css/: bootstrap.min.css
src/DisplayServer/DisplayServer/static/assets/js/: entrypoint.js  inkberry.js  inkberry_display.js  inkberry_editor.js  inkberry_editorselect.js  inkberry_helper.js  inkberry_index.js  inkberry_manualregister.js  inkberry_reactivate.js  inkberry_register.js
(+13 files in other folders)
